saving changes to heroku deploy

--- a/index.html
+++ b/index.html
@@ -3,30 +3,119 @@
 <head>
   <title>Portfolio Site</title>
   <link rel="stylesheet" type="text/css" href="normalize.css">
+  <link rel="stylesheet" type="text/css" href="foundation.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+  <script type="text/javascript" src="transit.js"></script>
+  <script type="text/javascript" src='modernizr.js'></script>
+  <script type="text/javascript" src='foundation.js'></script>
   <script type="text/javascript" src='main.js'></script>
 </head>
 <body>
 
   <nav class="navigation-wrapper">
-    <h1 class='title'><a href="navigation-wrapper">Teddy Cleveland</a></h1>
+    <h1 class='title'><a href="navigation-wrapper">Mark Zucks</a></h1>
     <div class="buttons-wrapper">
       <ul>
-        <li>
-          <a href="about">About</a>
-        </li>
-        <li>
-          <a href="works">Works</a>
-        </li>
-        <li>
-          <a href="contact">Contact</a>
-        </li>
-        <li>
-          <a href="github">Github</a>
-        </li>
+        <a href="about">
+          <li>
+            About
+          </li>
+        </a>
+        <a href="works">
+          <li>
+            Works
+          </li>
+        </a>
+        <a href="contact">
+          <li>
+            Contact
+          </li>
+        </a>
+        <a href="github">
+          <li>
+            Github
+          </li>
+        </a>
       </ul>
     </div>
   </nav>
+
+<div class="navigation-offset-fix"></div>
+
+  <section class = "about">
+    <div class='row'>
+      <h1>About</h1>
+    </div>
+    <div class="about-content row">
+      <div class='small-12 medium-4 columns'>
+        <h2>About Moi</h2>
+        <p>Lebowski ipsum there's no fucking reason—here's my point, Dude—there's no fucking reason. Dolor sit amet, consectetur adipiscing elit praesent ac </p>
+      </div>
+      <div class='small-12 medium-4 columns'>
+        <h2>Why I'm Awesome</h2>
+        <p>Lebowski ipsum there's no fucking reason—here's my point, Dude—there's no fucking reason. Dolor sit amet, consectetur adipiscing elit praesent ac </p>
+      </div>
+      <div class='small-12 medium-4 columns'>
+        <h2>My Life Story</h2>
+        <p>Lebowski ipsum there's no fucking reason—here's my point, Dude—there's no fucking reason. Dolor sit amet, consectetur adipiscing elit praesent ac </p>
+      </div>
+    </div>
+  </section>
+
+  
+  <section class = "works">
+    <div class='row'>
+      <h1>Works</h1>
+    </div>
+    <div class="works-content row">
+
+      <div class="small-6 columns project"> 
+        <h2> Facebook </h2>
+        <div class='project-image'>
+          <img src="http://www.theepochtimes.com/n2/images/stories/large/2011/06/09/facebook1234.jpg">
+        </div>
+        <span>This is my awesome description for this project.</span>
+          <span><a href="http://www.facebook.com"> Check it out! </a></span>
+      </div>
+
+      <div class="small-6 columns project"> 
+        <h2> Facebook </h2>
+        <div class='project-image'>
+          <img src="http://www.theepochtimes.com/n2/images/stories/large/2011/06/09/facebook1234.jpg">
+        </div>
+        <span>This is my awesome description for this project.</span>
+          <span><a href="http://www.facebook.com"> Check it out! </a></span>
+      </div>
+
+      <div class="small-6 columns project"> 
+        <h2> Facebook </h2>
+        <div class='project-image'>
+          <img src="http://www.theepochtimes.com/n2/images/stories/large/2011/06/09/facebook1234.jpg">
+        </div>
+        <span>This is my awesome description for this project.</span>
+          <span><a href="http://www.facebook.com"> Check it out! </a></span>
+      </div>
+
+      <div class="small-6 columns project"> 
+        <h2> Facebook </h2>
+        <div class='project-image'>
+          <img src="http://www.theepochtimes.com/n2/images/stories/large/2011/06/09/facebook1234.jpg">
+        </div>
+        <span>This is my awesome description for this project.</span>
+          <span><a href="http://www.facebook.com"> Check it out! </a></span>
+      </div>
+
+    </div>
+
+
+  </section>
+
+
+  <section class = "contact">
+    <h1>Contacts</h1>
+    <div style="height:500px"></div>
+  </section>
 
 
 </body>
